derive/tests/snapshots/string_index_column/Article/get_all_articles.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `article` table.
    pub fn get_all_articles<'a>(&'a self) -> impl Iterator<Item = Article> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().article().iter()
    }
}
