derive/tests/snapshots/string_index_column/Article/get_article_by_slug.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Article` from the `article` table whose value matches the value from the unique single-column btree index on the `slug` column.*/
    pub fn get_article_by_slug<'a>(
        &'a self,
        slug: &str,
    ) -> Result<Article, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().article().slug().find(slug.to_string()) {
            Some(article) => Ok(article),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "article".into(),
                    column_names_and_row_values: format!(
                        "{{ slug : {} }}", slug.to_string()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Article` from the `article` table whose value matches the value from the unique single-column btree index on the `slug` column.*/
    pub fn get_article_by_slug<'a>(
        &'a self,
        slug: &str,
    ) -> Result<Article, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().article().slug().find(slug.to_string()) {
            Some(article) => Ok(article),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "article".into(),
                    column_names_and_row_values: format!(
                        "{{ slug : {} }}", slug.to_string()
                    )
                        .into(),
                });
            }
        }
    }
}
