derive/tests/snapshots/string_index_column/Article/get_articles_by_category.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Article` iterator that contains all rows in the `article` table whose value matches the value from the single-column btree index on the `category` column.
    pub fn get_articles_by_category<'a>(
        &'a self,
        category: &'a str,
    ) -> impl Iterator<Item = Article> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().article().category().filter(category)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Article` iterator that contains all rows in the `article` table whose value matches the value from the single-column btree index on the `category` column.
    pub fn get_articles_by_category<'a>(
        &'a self,
        category: &'a str,
    ) -> impl Iterator<Item = Article> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().article().category().filter(category)
    }
}
