derive/tests/snapshots/string_index_column/Article/get_articles_by_tags.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Article` iterator that contains all rows in the `article` table whose value matches the value from the single-column btree index on the `tags` column.
    pub fn get_articles_by_tags<'a>(
        &'a self,
        tags: &impl Into<Option<ArticleTags>>,
    ) -> impl Iterator<Item = Article> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let tags = match tags.into() {
            None => None,
            Some(tags) => Into::<ArticleTags>::into(tags).value(),
        };
        self.db().article().tags().filter(tags)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Article` iterator that contains all rows in the `article` table whose value matches the value from the single-column btree index on the `tags` column.
    pub fn get_articles_by_tags<'a>(
        &'a self,
        tags: &impl Into<Option<ArticleTags>>,
    ) -> impl Iterator<Item = Article> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let tags = match tags.into() {
            None => None,
            Some(tags) => Into::<ArticleTags>::into(tags).value(),
        };
        self.db().article().tags().filter(tags)
    }
}
